--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -12,7 +12,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "1.*"
+        "laravel/ui": "1.*",
+        "nesbot/carbon": "^2.43"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
@@ -33,7 +34,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Models\\": "app/Models/"
         },
         "classmap": [
             "database/seeds",
